# hannah

./: .mk  Animation.cc  Animation.h  AnimationFactory.cc  AnimationFactory.h  Bonus.cc  Bonus.h  CHANGELOG  Defines.h  EMSCRIPTEN.md  Food.cc  Food.h  Ghost.cc  Ghost.h  Ghost1.cc  Ghost1.h  Ghost2.cc  Ghost2.h  Ghost3.cc  Ghost3.h  Global.cc  Global.h  Hannah.project  INSTALL  Level.cc  Level.h  Makefile.1-2  Makefile.Windows  Makefile.am  Makefile.in  Makefile.linux  Makefile.win32  Makefile.win64  Menu.cc  Menu.h  Player.cc  Player.h  README  README.Win32  ScoreLib.cc  (+15 more)
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
