AC_INIT([hannah], 2.0)
AC_CONFIG_MACRO_DIRS([m4])
INSTALL_DATA=${INSTALL} -m 644 -D
AM_INIT_AUTOMAKE(foreign)
AC_PROG_CXX
AM_PATH_SDL2([2.0.5])
#PKG_CHECK_MODULES([SDL2_image], [SDL2_image]) 
#PKG_CHECK_MODULES([SDL2_mixer], [SDL2_mixer])
#PKG_CHECK_MODULES([SDL2_ttf], [SDL2_ttf])
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
